# cw-rust

./: .gitignore  Cargo.toml  README.md  update.sh  wrangler.toml
.github/: dependabot.yml
.github/workflows/: cicd.yml
src/: lib.rs
